# shin-blur

./: .gitignore  blur_library_requirements_v3.md
blur_lib/: CMakeLists.txt
blur_lib/include/: blur_lib.h
blur_lib/src/: blur_lib.cpp  composition.cpp  d2d_blur.cpp  dwm_fallback.cpp  error.cpp  internal.h  logging.cpp  window_tracker.cpp
blur_lib/tests/: CMakeLists.txt  benchmark.cpp  test_blur.cpp
demo_app/: CMakeLists.txt  main.cpp  resource.rc
tauri_blur/: index.html  package-lock.json  package.json
tauri_blur/src/: main.ts  styles.css
tauri_blur/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri_blur/src-tauri/src/: blur_ffi.rs  lib.rs  main.rs
